# p-n-p-problem

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  read.cpp  read.h  test.txt  traj.py
